Complete all 9 bug fixes across frontend and backend
Frontend fixes:
- Change questionnaire wording to 'What should we call you?'
- Update carbon footprint emphasis to focus on products
- Prevent questionnaire from showing again after completion
- Change Tracker label to Manual Entry
- Add dashboard time filters (day/week/month/YTD/year)
- Fix product search filters cutoff issues
- Remove eco scores entirely, show carbon footprint per KG
- Remove activities references, focus on products
- Fix history page date issues and monthly button

Backend fixes:
- Fix date aggregation logic for history page
- Remove eco score filtering from product search
- Update marketing copy and app store descriptions

--- a/ectracc-marketing/index.html
+++ b/ectracc-marketing/index.html
@@ -478,7 +478,7 @@
     <section class="hero">
         <div class="container">
             <div class="beta-badge animate-in">🌱 Now in Beta</div>
-            <h1 class="animate-in">Track Your Carbon Footprint <br>Effortlessly</h1>
+            <h1 class="animate-in">Track the Carbon Footprint <br>of the Products You Buy</h1>
             <p class="subtitle animate-in">Scan barcodes, discover environmental impact, and make sustainable choices with real product data from 1,000+ brands.</p>
             
             <div class="hero-cta animate-in">
